--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "uuid": "^8.3.2"
+    "mongoose": "^6.3.5",
+    "morgan": "^1.10.0"
   }
 }
