--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "crud-express",
   "version": "0.1.0",
   "description": "A CRUD example using expressjs",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.ts",
     "test": "sh test.sh"
   },
   "author": "Axel Navarro (navarroaxel@gmail.com)",
@@ -12,7 +12,14 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongoose": "^6.3.5",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.3.6",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.16"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.41",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
