--- a/package.json
+++ b/package.json
@@ -2,17 +2,41 @@
   "name": "crud-express",
   "version": "0.1.0",
   "description": "A CRUD example using expressjs",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
-    "test": "sh test.sh"
+    "dev": "nodemon index.ts",
+    "start": "node build/index.js",
+    "build": "tsc",
+    "test:jest": "jest",
+    "test:jest-dev": "jest --watch",
+    "lint:check": "eslint -c .eslintrc.json \"**/*.{ts,tsx}\"",
+    "lint:fix": "eslint --fix .eslintrc.json \"**/*.{ts,tsx}\""
   },
   "author": "Axel Navarro (navarroaxel@gmail.com)",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.3.2",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@types/mongodb": "^4.0.7",
+    "eslint": "^8.43.0",
+    "jest": "^29.5.0",
+    "superagent": "^8.0.9",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
